
CURRENT VERSION:

	Risk Game:	1.1.0.4
	 * Save:	7
	 * Network:	8

	CommandLine:	1.0.4.1
	Flash GUI:	1.0.3.5
	Increment1GUI:	1.1.1.1
	Simple GUI:	1.1.1.1
	Swing GUI:	1.0.6.4

1.1.0.4

	fallback to png if can not save jpeg in OpenJDK
	map editor, can load maps with empty missions and spaces in the names
	MapStore will show scaled down full image when preview image is missing

1.1.0.3

	when there is a new version out, clicking ok takes you to the website
	NewGameFrame will show preview of map even if preview file is missing (shows red dot)
	support for java 1.4 again, got rid of the dependence on ToolsME.jar
	in network play if a user is missing a map, it will try to download it from the server
	special FX on game end :-)

1.1.0.2 (12.12.2011)

	continents in map editor show color in list
	can double click on items in list
	German update - Oliver S.
	Map Store added for downloading new maps
	Donate switched from paypal to google
	Map editor will default to user dir if it does not have access to save in normal maps dir, e.g win7
	publish button added to send maps to the server

Risk 1.1.0.1 (18.06.2010)

	in FlashGUI when u make a new game, it remembers your old player state
	bug with trading cards in CARD_INCREASING_SET fixed
	fix to trade button in FlashGUI Cards Dialog not being disabled

Risk 1.1.0.0 (02.06.2010)

	new build system to allow for building both Risk and Domination
	translation tool split off from main code
	pl language added
	italian card rules added
	3 dice to defend option added
	core Domination engine split from anything UI related in the hope to create a Risk for android
	in the map editor, if a new image is loaded with a different size to the imgmap, it asks if you want to update the size of the imgmap

Risk 1.0.9.8 (07.10.2008)

	no more licence in installer, as does not work in java 1.4
	In FixedCards gameMode some card trades were returning zero armies, for example {WILDCARD,WILDCARD,*}. - davet
	IT update - Orfeo Ciano